name:                distributed
version:             0.1.0.0
synopsis:            CH/OTP Test Task
description:         Please see README.md
homepage:            https://github.com/brunjlar/distributed#readme
license:             MIT
license-file:        LICENSE
author:              Lars Bruenjes
maintainer:          brunjlar@gmail.com
copyright:           (c) 2016 Lars Bruenjes
category:            Cloud
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Distributed
  other-modules:       Distributed.Broadcast
                     , Distributed.Channel
                     , Distributed.Utils
  ghc-options:         -Wall -threaded -O
  build-depends:       base >= 4.7 && < 5
                     , binary >= 0.6.3.0
                     , containers
                     , distributed-process
                     , time
  default-language:    Haskell2010

executable distributed
  hs-source-dirs:      distributed
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , distributed
                     , distributed-process
                     , distributed-process-simplelocalnet
  ghc-options:         -Wall -threaded -O
